Update README: Java 21, installers, current build instructions