@@ -1,44 +1,76 @@
-## How to build
+## Clash of Legends — Counselor
 
-**Prerequisites**
-- JDK 8 (tested with 1.8.0_301 / 1.8.0_461; use the JDK, not just JRE)
-- Apache Ant 1.8.0 or higher
-
-**Steps**
-
-1. Clone this repo and `PbmCommons` as siblings:
-   ```
-   git clone https://github.com/clashoflegends/PbmCommons
-   git clone https://github.com/clashoflegends/PbmCounselor
-   ```
-   Both repos must live in the same parent directory (`nbproject/project.properties` references `../PbmCommons`).
-
-2. Copy the example config:
-   ```
-   cp properties.config.example properties.config
-   ```
-   Edit `properties.config` with your SMTP credentials and preferred paths.
-
-3. Build:
-   ```
-   ant jar
-   ```
-   Output lands in `dist/PbmCounselor.jar`.
-
-**Note:** `lib/PbmPersistenceCommons.jar` is a prebuilt binary committed to this repo (private source). The build uses it as-is.
+The Counselor is the player client for *Clash of Legends*, a computer-moderated turn-based multiplayer strategy game. It loads your result file (`.egf`), displays the map and all game information, and lets you prepare and submit your orders for the next turn.
 
 ---
 
-This game is a computer moderated turn based multiplayer board game. It has strong elements from war games with a nice economical side to it. Also, it has some small pieces of RPG mixed in the bunch.
+## Download and run (players)
 
-The general mechanics are quite simple. For each turn you receive a result turn with all available information. Then you spend some time thinking and communicating with your allies (if any). Then you input your commands and send them to the moderator. The moderator (or Judge) will process all commands according to the scenario turn sequencing and then distribute the results. Then we play another turn until a winner is declared or the time limit is reached.
+Pre-built installers are available on the [Releases](../../releases/latest) page:
 
-The goal is that you should spend 10-20 minutes per week preparing you commands, after the initial learning curve is done. Some people may want to run the turns more often, but I do not recommend it for beginners.
+| Platform | File |
+|---|---|
+| Windows | `Counselor-x.y.z.msi` |
+| macOS | `Counselor-x.y.z.dmg` |
+| Linux | `counselor_x.y.z_amd64.deb` |
 
-The idea is to have a client program (the Counselor) to help both new and experienced players and to leverage knowledge. From the Counselor, all information will be made available. You can review your generals and wizards. You can check upon your assassins and your enemies' rogues if they are double agents.
+Each installer bundles a Java 21 runtime — no separate JDK install required.
 
-An easy to view map will help you see all theatre of operations in a glance. You review the information and give your commands at your own pace as we are all busy people.
+**First run:** copy `properties.config.example` to `properties.config` and fill in your `counselorToken` (provided by the game admin when you join).
 
-The game is quite stable and recently translated into English. It is far from finished, but we passed the initial beta and I'm looking for more players.
+---
 
-Are you interested in having some fun while crushing your enemies?
+## Build from source
+
+**Prerequisites**
+- JDK 21 (tested with Eclipse Temurin 21.0.x; use the JDK, not just JRE)
+- Apache Ant 1.9 or higher **or** Apache Maven 3.8+
+
+**Clone**
+```
+git clone https://github.com/clashoflegends/PbmCommons
+git clone https://github.com/clashoflegends/counselor
+```
+Both repos must be siblings in the same parent directory.
+
+**Build with Ant**
+```
+cd counselor
+ant jar \
+  -Dreference.PbmCommons.jar=lib/PbmCommons.jar \
+  -Dreference.PbmPersistenceCommons.jar=lib/PbmPersistenceCommons.jar \
+  -Dplatforms.JDK_21_Temurin.home=$JAVA_HOME
+```
+Output: `dist/PbmCounselor.jar`
+
+**Build with Maven**
+```
+cd counselor
+mvn package
+```
+
+**Note:** `lib/PbmPersistenceCommons.jar` is a prebuilt binary committed to this repo (private source). Both build systems use it as-is.
+
+---
+
+## Run from the build output
+
+**Windows**
+```
+run.bat [path\to\game.egf]
+```
+
+**macOS / Linux**
+```
+./run.sh [path/to/game.egf]
+```
+
+These scripts pass the required `--add-opens` flags for XStream under Java 21.
+
+---
+
+## About the game
+
+Clash of Legends is a play-by-mail strategy game with strong wargame and economic elements, and a small RPG component. Each turn you receive a result file with all available information, spend some time planning, then submit your orders. The Judge processes all orders and distributes the next result. One turn per week is typical.
+
+The Counselor shows you the full map, your generals, wizards, and rogues, enemy movements, city status, and everything else you need to make your decisions — then uploads your orders directly to the server.
